force-app/main/default/objects/SLA_Config__mdt/fields/Escalation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Hours__c</fullName>
    <label>Escalation Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>