force-app/main/default/objects/SLA_Config__mdt/fields/Owner_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Queue_Name__c</fullName>
    <description>Developer name of the queue that should own the record at this stage.</description>
    <label>Owner Queue Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>