force-app/main/default/objects/SLA_Config__mdt/fields/Target_Hours__c.field-meta.xml
<CustomField>
    <fullName>Target_Hours__c</fullName>
    <label>Target Hours</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>